# fidget

./: --mode=shaded-0  .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  out.txt  polyfill.h
constraints/: Cargo.toml  README.md  index.html
constraints/src/: main.rs
demo/: Cargo.toml
demo/src/: main.rs
demos/basic/: Cargo.toml
demos/basic/src/: main.rs  options.rs  prepare.rs  process.rs
demos/cli/: Cargo.toml
demos/cli/src/: main.rs
demos/constraints/: Cargo.toml  README.md  index.html
demos/constraints/src/: main.rs
demos/viewer/: Cargo.toml
demos/viewer/src/: canvas2d.rs  canvas3d.rs  draw2d.rs  draw3d.rs  fs.rs  main.rs  script.rs  watcher.rs
demos/web-editor/: .gitignore  Cargo.toml  README.md  global.d.ts  index.html  index.ts  message.ts  package-lock.json  package.json  rhai.grammar  rhai.ts  webpack.config.js
demos/web-editor/crate/: Cargo.toml  rust-toolchain.toml
demos/web-editor/web/: package-lock.json  package.json  webpack.config.js
fidget/: Cargo.toml  build.rs
fidget-bytecode/: Cargo.toml  README.md
fidget-bytecode/src/: lib.rs
fidget-core/: Cargo.toml  README.md  build.rs
fidget-core/src/: error.rs  lib.rs
fidget-core/src/asm/: alloc.rs  asm_op.rs  dynasm.rs  lru.rs  mod.rs
fidget-core/src/compiler/: alloc.rs  mod.rs  op.rs  reg_tape.rs  ssa_tape.rs
fidget-core/src/context/: context.rs  indexed.rs  mod.rs  op.rs  tree.rs
fidget-core/src/core/: mod.rs
fidget-core/src/eval/: asm.rs  bulk.rs  float_slice.rs  grad.rs  grad_slice.rs  interval.rs  mod.rs  point.rs  tracing.rs
fidget-core/src/gui/: mod.rs
fidget-core/src/jit/: float_slice.rs  mod.rs  point.rs
fidget-core/src/mesh/: builder.rs  cell.rs  dc.rs  mod.rs  output.rs  types.rs
fidget-core/src/render/: config.rs  mod.rs  region.rs  render2d.rs  render3d.rs  view.rs
fidget-core/src/rhai/: mod.rs  shapes.rs
fidget-core/src/shape/: mod.rs
fidget-core/src/shapes/: mod.rs  types.rs
fidget-core/src/solver/: mod.rs
fidget-core/src/tape/: builder.rs  op.rs  ssa.rs  tape.rs
fidget-core/src/types/: grad.rs
fidget-core/src/var/: mod.rs
fidget-core/src/vm/: choice.rs  data.rs  mod.rs
fidget-gui/: Cargo.toml  README.md
fidget-gui/src/: lib.rs
fidget-jit/: Cargo.toml  README.md  build.rs
fidget-jit/src/: float_slice.rs  grad_slice.rs  interval.rs  lib.rs  mmap.rs  permit.rs  point.rs
fidget-jit/src/aarch64/: float_slice.rs  grad_slice.rs  interval.rs  point.rs
fidget-jit/src/x86_64/: float_slice.rs  grad_slice.rs  interval.rs  point.rs
fidget-mesh/: Cargo.toml  README.md  build.rs
fidget-mesh/src/: cell.rs  dc.rs  lib.rs  octree.rs  output.rs  types.rs
fidget-raster/: Cargo.toml  README.md
fidget-raster/src/: config.rs  effects.rs  lib.rs  pixel.rs  render2d.rs  render3d.rs  voxel.rs
fidget-rhai/: Cargo.toml  README.md
fidget-rhai/src/: lib.rs  shapes.rs  tree.rs  types.rs
fidget-shapes/: Cargo.toml  README.md
fidget-shapes/src/: lib.rs  types.rs
fidget-solver/: Cargo.toml  README.md
fidget-solver/src/: lib.rs
fidget-wgpu/: Cargo.toml  README.md
fidget-wgpu/src/: lib.rs  render3d.rs  util.rs  voxel.rs
fidget-wgpu/src/effects/: mod.rs
fidget-wgpu/src/shaders/: backfill.wgsl  clear.wgsl  column.wgsl  common.wgsl  cumsum.wgsl  dummy_stack.wgsl  flatpack.wgsl  flatsum.wgsl  interval_ops.wgsl  interval_root.wgsl  interval_tile16.wgsl  interval_tiles.wgsl  merge.wgsl  normals.wgsl  repack.wgsl  sort.wgsl  stack.wgsl  tape_interpreter.wgsl  tape_simplify.wgsl  voxel_tiles.wgsl  wg_any_native.wgsl  wg_any_wasm.wgsl
fidget-wgpu/src/voxel/: mod.rs
fidget/benches/: function_call.rs  mesh.rs  pixel.rs  render.rs  voxel.rs
fidget/shader/: intervals.metal  pixels.metal  prelude.metal
fidget/src/: context.rs  error.rs  lib.rs  render.rs  render3d.rs
fidget/src/asm/: alloc.rs  asm_eval.rs  dynasm.rs  lru.rs  mod.rs
fidget/src/bind/: core.rhai  mod.rs
fidget/src/bytecode/: mod.rs
fidget/src/context/: context.rs  indexed.rs  op.rs
fidget/src/core/: mod.rs  tape.rs  vm.rs
fidget/src/eval/: asm.rs  choice.rs  eval.rs  float4.rs  float_slice.rs  interval.rs  math.rs  mod.rs  point.rs  traits.rs
fidget/src/gui/: mod.rs
fidget/src/jit/: float_slice.rs  grad.rs  grad_slice.rs  interval.rs  mmap.rs  mod.rs  permit.rs  point.rs
fidget/src/mesh/: builder.rs  cell.rs  dc.rs  fixup.rs  frame.rs  gen.rs  mod.rs  octree.rs  output.rs  pool.rs  qef.rs  types.rs  worker.rs
fidget/src/render/: camera.rs  config.rs  effects.rs  mod.rs  region.rs  render2d.rs  render3d.rs  render3d_mat.rs  view.rs
fidget/src/rhai/: constants.rs  core.rhai  core.rs  docs.rs  mod.rs  shapes.rs  tree.rs  types.rs  vec.rs
fidget/src/shapes/: mod.rs  types.rs  vec.rs
fidget/src/solver/: mod.rs
fidget/src/tape/: builder.rs  mod.rs  op.rs  tape.rs
fidget/src/wgpu/: backfill.wgsl  common.wgsl  common_ray.wgsl  interpreter_1f.wgsl  interpreter_4f.wgsl  interpreter_i.wgsl  interval_subtiles.wgsl  interval_tiles.wgsl  mod.rs  occupancy.wgsl  pixel.rs  pixel_tiles.wgsl  render3d.rs  size_fix.wgsl  util.rs  voxel.rs  voxel_ray.rs  voxel_ray.wgsl  voxel_tiles.wgsl
fidget/tests/: octree.rs  pixel_render.rs  render2d.rs  render3d.rs  voxel_render.rs
jitfive/: Cargo.toml
jitfive/shader/: clear.metal  init.metal  intervals.metal  merge.metal  pixels.metal  prelude.metal  subdivide.metal
jitfive/src/: asm.rs  backend.rs  bimap.rs  compiler.rs  context.rs  error.rs  eval.rs  indexed.rs  lib.rs  metal.rs  op.rs  passes.rs  program.rs  queue.rs  render.rs  render_mt.rs  scheduled.rs  scheduler.rs  stage0.rs  stage1.rs  stage2.rs  stage3.rs  stage4.rs  stage5.rs  tape.rs  util.rs
jitfive/src/asm/: alloc.rs  asm_alloc.rs  asm_eval.rs  asm_op.rs  choice.rs  dynasm.rs
jitfive/src/backend/: alloc.rs  asm.rs  common.rs  dynasm.rs  interpreter.rs  llvm.rs  tape.rs  tape32.rs  tape48.rs  tape64.rs
jitfive/src/context/: context.rs  indexed.rs  op.rs
jitfive/src/passes/: find_groups.rs  flatten_tree.rs  group_graph.rs  group_tree.rs  (+4 more)
libfive-import/: Cargo.toml
libfive-import/src/: main.rs
viewer/: Cargo.toml
viewer/src/: main.rs
(+209 files in other folders)
