[workspace]
resolver = "2"
members = [
    "fidget",
    "demos/constraints",
    "demos/cli",
    "demos/viewer",
    "workspace-hack",
]
exclude = ["demos/web-editor/crate"]

[profile.release]
debug = true
overflow-checks = true

[profile.bench]
lto = "thin"
codegen-units = 1

[profile.test]
opt-level = 1

[profile.fast-test]
inherits = "test"
opt-level = 0

[workspace.dependencies]
anyhow = "1"
arrayvec = "0.7"
bimap = "0.6"
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
document-features = "0.2"
dynasmrt = "3.0"
eframe = "0.31"
env_logger = "0.11"
image = "0.25"
libc = "0.2"
log = "0.4"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
notify = "8.0"
num-traits = "0.2"
ordered-float = "5"
rand = "0.9"
rayon = "1.10"
rhai = { version = "1.17", features = ["sync"] }
serde = { version = "1.0", features = ["derive", "rc"] }
static_assertions = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
windows = { version = "0.60", features = ["Win32_Foundation", "Win32_System_Memory"] }
