[workspace]
resolver = "2"
members = [
    # Fidget crates
    "fidget",
    "fidget-core",
    "fidget-rhai",

    # Non-WASM demos
    "demos/constraints",
    "demos/cli",
    "demos/viewer",

    # `cargo hakari` package
    "workspace-hack",
]
exclude = ["demos/web-editor/crate"]

[workspace.package]
rust-version = "1.87"

[profile.release]
debug = true
overflow-checks = true

[profile.bench]
lto = "thin"
codegen-units = 1

[profile.test]
opt-level = 1

[profile.fast-test]
inherits = "test"
opt-level = 0

[workspace.dependencies]
anyhow = "1"
arrayvec = "0.7"
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
document-features = "0.2"
dynasmrt = "3.0"
eframe = { version = "0.31", features = ["wgpu"] }
enum-map = "2.7.3"
facet = { version = "=0.28.1", features = ["reflect"] }
env_logger = "0.11"
heck = { version = "0.5" }
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
log = "0.4"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
notify = "8.0"
ordered-float = "5"
rand = "0.9"
rayon = "1.10"
rhai = { version = "=1.21.0", features = ["sync"] } # pinned due to rhai#1001
serde = { version = "1.0", features = ["derive", "rc"] }
static_assertions = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Memory"] }
zerocopy = { version = "0.8", features = ["derive"] }
