[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jitfive = { path = "../jitfive" }

clap = { version = "3.2.6", features = ["derive"] }
env_logger = "0.9"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
