[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
fidget = { path = "../fidget", default-features = false, features = ["render"] }

clap = { version = "3.2.6", features = ["derive"] }
env_logger = "0.9"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
nalgebra = "0.31"

[features]
default = ["jit"]
jit = ["fidget/jit"]
