[package]
name = "fidget-bytecode"
description = "Bytecode representation for Fidget expression tapes"
readme = "README.md"
version = "0.4.1"

edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
fidget-core.workspace = true
workspace-hack.workspace = true

serde.workspace = true
strum.workspace = true
zerocopy.workspace = true
