[package]
name = "fidget-gui"
description = "Platform-independent GUI abstractions for Fidget"
readme = "README.md"
version = "0.4.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
fidget-core.workspace = true
workspace-hack.workspace = true

nalgebra.workspace = true
serde.workspace = true
