[package]
name = "fidget-jit"
version = "0.1.0"
edition = "2021"

[dependencies]
fidget-core = { path = "../fidget-core" }
dynasmrt = "1.2.3"
libc = "0.2"

[features]
eval-tests = []

[dev-dependencies]
fidget-core = { path = "../fidget-core", features = ["eval-tests"] }
fidget-jit = { path = ".", features = ["eval-tests"] }
