[package]
name = "fidget-jit"
description = "Native JIT compiler for Fidget"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
fidget-core = { path = "../fidget-core", version = "=0.4.0" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

arrayvec.workspace = true
dynasmrt.workspace = true
libc.workspace = true
static_assertions.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[dev-dependencies]
fidget-core = { path = "../fidget-core", version = "=0.4.0", features= ["eval-tests"] }
