[package]
name = "fidget-jit"
description = "Native JIT compiler for Fidget"
readme = "README.md"
version = "0.4.1"

edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
fidget-core.workspace = true
workspace-hack.workspace = true

arrayvec.workspace = true
dynasmrt.workspace = true
static_assertions.workspace = true

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[dev-dependencies]
fidget-core = { workspace = true, features= ["eval-tests"] }
