[package]
name = "fidget-mesh"
description = "Meshing of complex closed-form implicit surfaces"
readme = "../README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
fidget-core = { path = "../fidget-core", version = "=0.4.0" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

arrayvec.workspace = true
nalgebra.workspace = true
ordered-float.workspace = true
rayon.workspace = true
static_assertions.workspace = true
