[package]
name = "fidget-raster"
description = "Bitmap and heightmap rendering for Fidget"
readme = "README.md"
version = "0.4.1"

edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
fidget-core.workspace = true
workspace-hack.workspace = true

nalgebra.workspace = true
ordered-float.workspace = true
rand.workspace = true
rayon.workspace = true
zerocopy.workspace = true
