[package]
name = "fidget-shapes"
description = "Shapes and transforms for use with Fidget"
readme = "../README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
fidget-core = { path = "../fidget-core", version = "=0.4.0" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

enum-map.workspace = true
facet.workspace = true
nalgebra.workspace = true
strum.workspace = true
thiserror.workspace = true
