[package]
name = "fidget-shapes"
description = "Shapes and transforms for use with Fidget"
readme = "README.md"
version = "0.4.1"

edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
fidget-core.workspace = true
workspace-hack.workspace = true

enum-map.workspace = true
facet.workspace = true
nalgebra.workspace = true
strum.workspace = true
thiserror.workspace = true
