[package]
name = "fidget-solver"
description = "Constraint solver using Fidget as a backend"
readme = "README.md"
version = "0.4.4"

edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
fidget-core.workspace = true
workspace-hack.workspace = true

nalgebra.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
