[package]
name = "fidget-wgpu"
description = "WGPU backend for Fidget"
readme = "README.md"
version = "0.4.3"

edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
fidget-core.workspace = true
fidget-raster.workspace = true
fidget-bytecode.workspace = true
workspace-hack.workspace = true

flume.workspace = true
heck.workspace = true
log.workspace = true
naga.workspace = true
nalgebra.workspace = true
strum.workspace = true
thiserror.workspace = true
wgpu.workspace = true
zerocopy.workspace = true

[dev-dependencies]
pollster.workspace = true
