[package]
name = "basic"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
image.workspace = true
log.workspace = true
nalgebra.workspace = true
rayon.workspace = true
rand.workspace = true

fidget.path = "../../fidget"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
jit = ["fidget/jit"]
default = ["jit"]

[[bin]]
name = "basic"
test = false
doctest = false
