[package]
name = "constraints"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }

fidget = { path = "../../fidget", default-features = false, features = ["solver"] }
log = "0.4"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
