[package]
name = "constraints"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
eframe.workspace = true
log.workspace = true

fidget = { path = "../../fidget", default-features = false, features = ["solver"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
