[package]
name = "fidget-viewer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
eframe.workspace = true
env_logger.workspace = true
log.workspace = true
nalgebra.workspace = true
notify.workspace = true
rhai.workspace = true

fidget = { path = "../../fidget", default-features = false, features = ["render", "rhai"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
default = ["jit"]
jit = ["fidget/jit"]
