[package]
name = "fidget-wasm-demo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
wasm-bindgen = "0.2.92"
nalgebra = "0.32"

fidget = {path = "../../fidget", default-features = false, features = ["rhai", "mesh", "render"]}

# Take advantage of feature unification to turn on wasm-bindgen here
rhai = { version = "*", features = ["wasm-bindgen"] }
