[package]
name = "fidget-wasm-demo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
nalgebra = "0.33"

wasm-bindgen = "0.2.100"
wasm-bindgen-rayon = "1.3"

fidget.path = "../../../fidget"

# Take advantage of feature unification to turn on wasm-bindgen here
rhai = { version = "*", features = ["wasm-bindgen"] }
